# 6DPoseEstimationCNN

cpp/: CMakeLists.txt  Hypothesis.cpp  Hypothesis.h  auto_context.h  binCentroids.cpp  binCentroids.h  combined_feature.h  convertDepthImage.cpp  dataset.cpp  dataset.h  debugQuickLookObject.hpp  detection.h  feature_abscell.h  feature_abscoord.h  feature_dabgr.h  features.cpp  features.h  image_cache.h  multi_dataset.h  pointCloudTools.h  pose_evaluation.h  project.pbxproj  properties.cpp  properties.h  ransac2D.h  ransac3D.h  read_data.cpp  read_data.h  regression_classifier.h  regression_evaluation.h  regression_tree.cpp  regression_tree.h  test_pose_estimation.cpp  thread_rand.cpp  train_trees.cpp  training_samples.cpp  training_samples.h  tree_structure.h  types.h  util.h  (+4 more)
cpp/project.xcworkspace/xcuserdata/apurvnigam.xcuserdatad/: UserInterfaceState.xcuserstate
cpp/xcuserdata/apurvnigam.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
cpp/xcuserdata/apurvnigam.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  ZERO_CHECK.xcscheme  test_pose_estimation.xcscheme  train_trees.xcscheme  xcschememanagement.plist
fcn8_vgg/: dataGenerator.py  fcn8_vgg.py  fcn8_vggO.py  inputLoader.py  loss.py  testScenes.txt  train_fcn8.py  train_fcnn_multi.py  train_fcnn_multi_backup.py  trainingScenes.txt  utils.py
matlab/: Copy_of_binning.m  binning.m  binning_org.m  calcObjBinCentroids.m  convert.m  drawBB2D.m  drawBB3D.m  estimatePose.m  genMask.m  genPatches.m  generateLabels.m  getBB2D.m  getBB3D.m  getScenePc.m  getTransf.m  loadModel.m  matconv.m  newSeg.m  objCoord.m  reconstructScene.m  render.m  repairDepthImages.m  seg.m  seg1.m  subSampleImages.m  temp.m  test.m  testPose.m
python/: alexTest.py  alexnet.py  binCents.py  createChallengeTestSet.py  dataGenerator.py  dataLoader.py  datagenerator_old.py  debugBatches.py  duck_AugmentedReality.py  estimatePose.py  finetune.py  genColors.py  genInfoFiles.py  genLabels.py  genNumpyArrays.py  genObjCoord.py  genPatches.py  genPatchesDummy.py  genPatchesDummy2.py  genTestPatches.py  getBB3D.py  getTransf.py  queueTest.py  ransac2D  ransac2D.py  readGT.py  renderSegMasks.py  renderSyntheticSegMask.py  renderSyntheticTrainImages.py  renderer.py  resizeImg.py  (+4 more)
